# Jobs_vacancies

./: README.md  pyproject.toml
src/: main.py
src/api/: class_api.py  setting.py
src/saver/: config.py  saver_json.py
